const axios = require('axios'); // Para REST
const GrpcClient = require('./client'); // Para gRPC

/**
 * Benchmark: gRPC vs REST - VERS√ÉO CORRIGIDA
 * 
 * Compara performance entre implementa√ß√µes
 * gRPC/Protobuf vs REST/JSON
 */

class PerformanceBenchmark {
    constructor() {
        this.results = {
            grpc: { times: [], errors: 0, totalBytes: 0 },
            rest: { times: [], errors: 0, totalBytes: 0 }
        };
    }

    async setupGrpcUser() {
        const client = new GrpcClient();
        await client.initialize();
        
        const uniqueId = Date.now();
        const userData = {
            email: `benchmark${uniqueId}@grpc.com`,
            username: `benchmarkuser${uniqueId}`,
            password: 'benchmark123',
            first_name: 'Benchmark',
            last_name: 'User'
        };

        console.log('üîß Configurando usu√°rio para benchmark gRPC...');
        
        try {
            // Tentar registrar usu√°rio
            const regResponse = await client.register(userData);
            if (regResponse.success && regResponse.token) {
                console.log('‚úÖ Usu√°rio registrado com sucesso');
                client.currentToken = regResponse.token;
                return client;
            } else {
                console.log('‚ö†Ô∏è Falha no registro, tentando login...');
                throw new Error('Registro falhou');
            }
        } catch (regError) {
            // Se registro falhar, tentar login
            try {
                const loginResponse = await client.login({
                    identifier: userData.email,
                    password: userData.password
                });
                
                if (loginResponse.success && loginResponse.token) {
                    console.log('‚úÖ Login realizado com sucesso');
                    client.currentToken = loginResponse.token;
                    return client;
                } else {
                    throw new Error('Login tamb√©m falhou');
                }
            } catch (loginError) {
                console.log('‚ùå Erro na autentica√ß√£o gRPC:', loginError.message);
                throw new Error(`Falha na autentica√ß√£o: ${loginError.message}`);
            }
        }
    }

    async benchmarkGrpc(iterations = 100) {
        console.log(`üî¨ Iniciando benchmark gRPC (${iterations} itera√ß√µes)...`);
        
        let client;
        try {
            client = await this.setupGrpcUser();
            
            // Verificar se o token est√° funcionando
            try {
                await client.getTasks({ page: 1, limit: 1 });
                console.log('‚úÖ Token gRPC validado');
            } catch (error) {
                console.log('‚ùå Token inv√°lido, tentando reautenticar...');
                client = await this.setupGrpcUser();
            }
            
        } catch (error) {
            console.log('‚ùå Falha na configura√ß√£o do cliente gRPC:', error.message);
            console.log('‚ö†Ô∏è Pulando benchmark gRPC');
            return;
        }

        // Criar algumas tarefas para teste se n√£o existirem
        console.log('üìã Criando tarefas de teste...');
        for (let i = 0; i < 3; i++) {
            try {
                await client.createTask({
                    title: `Tarefa Benchmark gRPC ${i + 1}`,
                    description: `Descri√ß√£o da tarefa ${i + 1} para teste de performance`,
                    priority: i % 4 // Varia entre 0-3
                });
            } catch (error) {
                // Se falhar na cria√ß√£o, n√£o √© cr√≠tico
                console.log(`‚ö†Ô∏è Falha ao criar tarefa ${i + 1}: ${error.message}`);
            }
        }

        console.log('üìä Executando testes de performance gRPC...');

        // Benchmark de listagem de tarefas
        let successCount = 0;
        for (let i = 0; i < iterations; i++) {
            const start = process.hrtime.bigint();
            
            try {
                const response = await client.getTasks({ page: 1, limit: 10 });
                const end = process.hrtime.bigint();
                const duration = Number(end - start) / 1e6; // Convert to milliseconds
                
                this.results.grpc.times.push(duration);
                successCount++;
                
                // Estimar tamanho da resposta
                const responseSize = JSON.stringify(response).length;
                this.results.grpc.totalBytes += responseSize;
                
                if (i % 20 === 0 && i > 0) {
                    console.log(`gRPC: ${i}/${iterations} completed (${successCount} success)`);
                }
            } catch (error) {
                this.results.grpc.errors++;
                console.error(`‚ùå Erro gRPC na itera√ß√£o ${i}: ${error.message}`);
                
                // Se muitos erros consecutivos, parar
                if (this.results.grpc.errors > 10 && i < 20) {
                    console.log('‚ùå Muitos erros gRPC, interrompendo benchmark');
                    break;
                }
            }
        }

        console.log(`‚úÖ Benchmark gRPC conclu√≠do: ${successCount}/${iterations} sucessos`);
    }

    async setupRestUser() {
        const baseUrl = 'http://localhost:3000/api';
        const uniqueId = Date.now() + 1000; // Diferente do gRPC
        
        const userData = {
            email: `benchmarkrest${uniqueId}@rest.com`,
            username: `benchmarkrest${uniqueId}`,
            password: 'benchmark123',
            firstName: 'Benchmark',
            lastName: 'REST'
        };

        console.log('üîß Configurando usu√°rio para benchmark REST...');

        try {
            // Tentar registrar
            try {
                await axios.post(`${baseUrl}/auth/register`, userData);
                console.log('‚úÖ Usu√°rio REST registrado');
            } catch (regError) {
                console.log('‚ö†Ô∏è Registro REST falhou (usu√°rio pode j√° existir)');
            }

            // Fazer login
            const loginResponse = await axios.post(`${baseUrl}/auth/login`, {
                identifier: userData.email,
                password: userData.password
            });

            const token = loginResponse.data.data.token;
            console.log('‚úÖ Login REST realizado com sucesso');
            
            return { token, baseUrl };
            
        } catch (error) {
            throw new Error(`Falha na autentica√ß√£o REST: ${error.message}`);
        }
    }

    async benchmarkRest(iterations = 100) {
        console.log(`üåê Iniciando benchmark REST (${iterations} itera√ß√µes)...`);
        
        let restConfig;
        try {
            restConfig = await this.setupRestUser();
        } catch (error) {
            console.log('‚ö†Ô∏è Servidor REST n√£o dispon√≠vel ou erro na configura√ß√£o:', error.message);
            console.log('   Para executar compara√ß√£o completa, inicie o servidor do Roteiro 1 na porta 3000');
            return;
        }

        const { token, baseUrl } = restConfig;
        const headers = { Authorization: `Bearer ${token}` };

        // Criar algumas tarefas para teste
        console.log('üìã Criando tarefas de teste REST...');
        for (let i = 0; i < 3; i++) {
            try {
                await axios.post(`${baseUrl}/tasks`, {
                    title: `Tarefa REST Benchmark ${i + 1}`,
                    description: `Descri√ß√£o da tarefa ${i + 1} para teste de performance`,
                    priority: ['low', 'medium', 'high', 'urgent'][i % 4]
                }, { headers });
            } catch (error) {
                console.log(`‚ö†Ô∏è Falha ao criar tarefa REST ${i + 1}: ${error.message}`);
            }
        }

        console.log('üìä Executando testes de performance REST...');

        // Benchmark de listagem de tarefas
        let successCount = 0;
        for (let i = 0; i < iterations; i++) {
            const start = process.hrtime.bigint();
            
            try {
                const response = await axios.get(`${baseUrl}/tasks?page=1&limit=10`, { headers });
                const end = process.hrtime.bigint();
                const duration = Number(end - start) / 1e6;
                
                this.results.rest.times.push(duration);
                successCount++;
                
                // Calcular tamanho real da resposta
                const responseSize = JSON.stringify(response.data).length;
                this.results.rest.totalBytes += responseSize;
                
                if (i % 20 === 0 && i > 0) {
                    console.log(`REST: ${i}/${iterations} completed (${successCount} success)`);
                }
            } catch (error) {
                this.results.rest.errors++;
                console.error(`‚ùå Erro REST na itera√ß√£o ${i}: ${error.message}`);
                
                // Se muitos erros consecutivos, parar
                if (this.results.rest.errors > 10 && i < 20) {
                    console.log('‚ùå Muitos erros REST, interrompendo benchmark');
                    break;
                }
            }
        }

        console.log(`‚úÖ Benchmark REST conclu√≠do: ${successCount}/${iterations} sucessos`);
    }

    calculateStats(times) {
        if (times.length === 0) return null;
        
        const sorted = times.sort((a, b) => a - b);
        const sum = times.reduce((acc, time) => acc + time, 0);
        
        return {
            mean: sum / times.length,
            median: sorted[Math.floor(sorted.length / 2)],
            min: sorted[0],
            max: sorted[sorted.length - 1],
            p95: sorted[Math.floor(sorted.length * 0.95)],
            p99: sorted[Math.floor(sorted.length * 0.99)],
            stdDev: Math.sqrt(times.reduce((acc, time) => acc + Math.pow(time - (sum / times.length), 2), 0) / times.length)
        };
    }

    printResults() {
        console.log('\n' + '='.repeat(60));
        console.log('üìä RESULTADOS DO BENCHMARK DE PERFORMANCE');
        console.log('='.repeat(60));

        const grpcStats = this.calculateStats(this.results.grpc.times);
        const restStats = this.calculateStats(this.results.rest.times);

        if (grpcStats && this.results.grpc.times.length > 0) {
            console.log('\nüîß gRPC/Protocol Buffers:');
            console.log(`   ‚îú‚îÄ Requisi√ß√µes v√°lidas: ${this.results.grpc.times.length}`);
            console.log(`   ‚îú‚îÄ Erros: ${this.results.grpc.errors}`);
            console.log(`   ‚îú‚îÄ Taxa de sucesso: ${((this.results.grpc.times.length / (this.results.grpc.times.length + this.results.grpc.errors)) * 100).toFixed(1)}%`);
            console.log(`   ‚îú‚îÄ Tempo m√©dio: ${grpcStats.mean.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Mediana: ${grpcStats.median.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Desvio padr√£o: ${grpcStats.stdDev.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Min/Max: ${grpcStats.min.toFixed(2)}ms / ${grpcStats.max.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ P95: ${grpcStats.p95.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ P99: ${grpcStats.p99.toFixed(2)}ms`);
            console.log(`   ‚îî‚îÄ Total bytes: ${this.results.grpc.totalBytes.toLocaleString()}`);
        } else {
            console.log('\nüîß gRPC/Protocol Buffers:');
            console.log('   ‚îî‚îÄ ‚ùå Nenhum dado v√°lido coletado');
        }

        if (restStats && this.results.rest.times.length > 0) {
            console.log('\nüåê REST/JSON:');
            console.log(`   ‚îú‚îÄ Requisi√ß√µes v√°lidas: ${this.results.rest.times.length}`);
            console.log(`   ‚îú‚îÄ Erros: ${this.results.rest.errors}`);
            console.log(`   ‚îú‚îÄ Taxa de sucesso: ${((this.results.rest.times.length / (this.results.rest.times.length + this.results.rest.errors)) * 100).toFixed(1)}%`);
            console.log(`   ‚îú‚îÄ Tempo m√©dio: ${restStats.mean.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Mediana: ${restStats.median.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Desvio padr√£o: ${restStats.stdDev.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Min/Max: ${restStats.min.toFixed(2)}ms / ${restStats.max.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ P95: ${restStats.p95.toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ P99: ${restStats.p99.toFixed(2)}ms`);
            console.log(`   ‚îî‚îÄ Total bytes: ${this.results.rest.totalBytes.toLocaleString()}`);
        } else {
            console.log('\nüåê REST/JSON:');
            console.log('   ‚îî‚îÄ ‚ö†Ô∏è Servidor REST n√£o dispon√≠vel ou sem dados v√°lidos');
        }

        if (grpcStats && restStats && this.results.grpc.times.length > 0 && this.results.rest.times.length > 0) {
            const latencyImprovement = ((restStats.mean - grpcStats.mean) / restStats.mean * 100);
            const bandwidthSavings = ((this.results.rest.totalBytes - this.results.grpc.totalBytes) / this.results.rest.totalBytes * 100);
            
            console.log('\nüèÜ AN√ÅLISE COMPARATIVA:');
            console.log(`   ‚îú‚îÄ Lat√™ncia: gRPC √© ${Math.abs(latencyImprovement).toFixed(1)}% ${latencyImprovement > 0 ? 'mais r√°pido' : 'mais lento'} que REST`);
            console.log(`   ‚îú‚îÄ Diferen√ßa m√©dia: ${Math.abs(restStats.mean - grpcStats.mean).toFixed(2)}ms`);
            console.log(`   ‚îú‚îÄ Bandwidth: gRPC usa ${Math.abs(bandwidthSavings).toFixed(1)}% ${bandwidthSavings > 0 ? 'menos' : 'mais'} dados`);
            console.log(`   ‚îú‚îÄ Throughput gRPC: ${(1000 / grpcStats.mean).toFixed(1)} req/s`);
            console.log(`   ‚îú‚îÄ Throughput REST: ${(1000 / restStats.mean).toFixed(1)} req/s`);
            
            if (latencyImprovement > 0) {
                console.log(`   ‚îî‚îÄ üéØ gRPC demonstra melhor performance para este caso de uso`);
            } else {
                console.log(`   ‚îî‚îÄ ‚ö†Ô∏è REST apresentou melhor performance neste teste`);
            }
        } else {
            console.log('\nüèÜ AN√ÅLISE COMPARATIVA:');
            console.log('   ‚îî‚îÄ ‚ö†Ô∏è Compara√ß√£o n√£o dispon√≠vel - dados insuficientes de um ou ambos protocolos');
        }

        console.log('\nüìù OBSERVA√á√ïES:');
        console.log('   ‚Ä¢ Resultados podem variar baseado em hardware, rede e carga do sistema');
        console.log('   ‚Ä¢ gRPC t√≠picamente performa melhor com payloads maiores e alta frequ√™ncia');
        console.log('   ‚Ä¢ REST pode ser mais r√°pido para opera√ß√µes simples e cache HTTP');
        console.log('   ‚Ä¢ Considere tamb√©m fatores como debugging, tooling e ecosystem');
        console.log('   ‚Ä¢ Para compara√ß√£o completa, certifique-se que ambos servidores est√£o rodando');
    }
}

// Executar benchmark
async function runBenchmark() {
    const iterations = process.argv[2] ? parseInt(process.argv[2]) : 50;
    const benchmark = new PerformanceBenchmark();
    
    console.log(`üöÄ Iniciando benchmark com ${iterations} itera√ß√µes por protocolo`);
    console.log('‚è±Ô∏è Este processo pode levar alguns minutos...\n');
    
    // Verificar se pelo menos um servidor est√° dispon√≠vel
    console.log('üîç Verificando disponibilidade dos servidores...');
    
    try {
        // Testar gRPC
        const grpcClient = new GrpcClient();
        await grpcClient.initialize();
        console.log('‚úÖ Servidor gRPC dispon√≠vel');
    } catch (error) {
        console.log('‚ùå Servidor gRPC n√£o dispon√≠vel:', error.message);
        console.log('   Execute "npm start" para iniciar o servidor gRPC');
        return;
    }
    
    try {
        // Testar REST
        await axios.get('http://localhost:3000/health');
        console.log('‚úÖ Servidor REST dispon√≠vel');
    } catch (error) {
        console.log('‚ö†Ô∏è Servidor REST n√£o dispon√≠vel (compara√ß√£o limitada)');
        console.log('   Para compara√ß√£o completa, execute o servidor do Roteiro 1 na porta 3000');
    }
    
    console.log(''); // Nova linha
    
    try {
        await benchmark.benchmarkGrpc(iterations);
        await benchmark.benchmarkRest(iterations);
        benchmark.printResults();
    } catch (error) {
        console.error('‚ùå Erro no benchmark:', error.message);
        console.error('Stack trace:', error.stack);
    }
}

if (require.main === module) {
    runBenchmark().catch(error => {
        console.error('‚ùå Falha cr√≠tica no benchmark:', error.message);
        process.exit(1);
    });
}

module.exports = PerformanceBenchmark;