const grpc = require('@grpc/grpc-js');
const ProtoLoader = require('./utils/protoLoader');
const AuthService = require('./services/AuthService');
const TaskService = require('./services/TaskService');
const AuthInterceptor = require('./middleware/auth');
const ErrorHandler = require('./middleware/errorHandler');
const Logger = require('./middleware/logger');
const database = require('./database/database');

/**
 * Servidor gRPC
 * 
 * Implementa comunica√ß√£o de alta performance usando:
 * - Protocol Buffers para serializa√ß√£o eficiente
 * - HTTP/2 como protocolo de transporte
 * - Streaming bidirecional para tempo real
 * 
 * Segundo Google (2023), gRPC oferece at√© 60% melhor performance
 * comparado a REST/JSON em cen√°rios de alta carga
 */

class GrpcServer {
    constructor() {
        this.server = new grpc.Server();
        this.protoLoader = new ProtoLoader();
        this.authService = new AuthService();
        this.taskService = new TaskService();
        
        // M√©todos que requerem autentica√ß√£o JWT
        this.securedMethods = [
            '/tasks.TaskService/CreateTask',
            '/tasks.TaskService/GetTasks',
            '/tasks.TaskService/GetTask',
            '/tasks.TaskService/UpdateTask',
            '/tasks.TaskService/DeleteTask',
            '/tasks.TaskService/GetTaskStats',
            '/tasks.TaskService/StreamTasks',
            '/tasks.TaskService/StreamNotifications',
            '/auth.AuthService/ValidateToken'
        ];
    }

    async initialize() {
        try {
            // Inicializar banco de dados
            await database.init();

            // Carregar defini√ß√µes dos protobuf
            const authProto = this.protoLoader.loadProto('auth_service.proto', 'auth');
            const taskProto = this.protoLoader.loadProto('task_service.proto', 'tasks');

            // Aplicar interceptadores globais
            this.applyInterceptors();
            
            // Registrar servi√ßos de autentica√ß√£o (com interceptador aplicado)
            this.server.addService(authProto.AuthService.service, {
                Register: this.wrapWithAuth(this.authService.register.bind(this.authService)),
                Login: this.wrapWithAuth(this.authService.login.bind(this.authService)),
                ValidateToken: this.wrapWithAuth(this.authService.validateToken.bind(this.authService))
            });

            // Registrar servi√ßos de tarefas (com interceptador aplicado)
            this.server.addService(taskProto.TaskService.service, {
                CreateTask: this.wrapWithAuth(this.taskService.createTask.bind(this.taskService)),
                GetTasks: this.wrapWithAuth(this.taskService.getTasks.bind(this.taskService)),
                GetTask: this.wrapWithAuth(this.taskService.getTask.bind(this.taskService)),
                UpdateTask: this.wrapWithAuth(this.taskService.updateTask.bind(this.taskService)),
                DeleteTask: this.wrapWithAuth(this.taskService.deleteTask.bind(this.taskService)),
                GetTaskStats: this.wrapWithAuth(this.taskService.getTaskStats.bind(this.taskService)),
                StreamTasks: this.wrapWithAuth(this.taskService.streamTasks.bind(this.taskService)),
                StreamNotifications: this.wrapWithAuth(this.taskService.streamNotifications.bind(this.taskService))
            });

            Logger.info('Servi√ßos gRPC registrados com sucesso', {
                services: ['AuthService', 'TaskService'],
                securedMethods: this.securedMethods.length,
                interceptors: 3
            });
        } catch (error) {
            Logger.error('Erro na inicializa√ß√£o do servidor gRPC', error);
            throw error;
        }
    }

    /**
     * Wrapper completo para aplicar autentica√ß√£o, error handling e logging
     */
    wrapWithAuth(originalMethod) {
        return ErrorHandler.wrapServiceMethod(
            Logger.wrapServiceMethod(
                async (call, callback) => {
                    try {
                        // Verificar se o m√©todo requer autentica√ß√£o
                        const methodPath = call.handler && call.handler.path;
                        const requiresAuth = this.securedMethods.some(method => 
                            methodPath && methodPath.includes(method.split('/').pop())
                        );

                        // M√©todos p√∫blicos (n√£o requerem autentica√ß√£o)
                        const publicMethods = ['Register', 'Login'];
                        const methodName = originalMethod.name;
                        
                        if (!requiresAuth || publicMethods.includes(methodName)) {
                            Logger.info(`Executando m√©todo p√∫blico: ${methodName}`, {
                                method: methodName,
                                public: true
                            });
                            return await originalMethod(call, callback);
                        }

                        // Validar autentica√ß√£o para m√©todos protegidos
                        Logger.debug(`Validando autentica√ß√£o para: ${methodName}`);
                        const user = await AuthInterceptor.validateAuth(call);
                        if (!user) {
                            throw ErrorHandler.createAuthError('Falha na valida√ß√£o de autentica√ß√£o');
                        }

                        // Executar m√©todo original com usu√°rio autenticado
                        call.user = user;
                        Logger.info(`Usu√°rio autenticado executando: ${methodName}`, {
                            userId: user.id,
                            method: methodName
                        });
                        
                        return await originalMethod(call, callback);
                        
                    } catch (error) {
                        // Error handling √© tratado pelo ErrorHandler.wrapServiceMethod
                        throw error;
                    }
                },
                originalMethod.name
            )
        );
    }

    /**
     * Aplicar interceptadores globais ao servidor
     */
    applyInterceptors() {
        // Interceptador de logging (aplicado primeiro)
        const loggingInterceptor = Logger.createLoggingInterceptor();
        
        // Interceptador de error handling
        const errorInterceptor = ErrorHandler.createErrorInterceptor();
        
        // Interceptador de autentica√ß√£o
        const authInterceptor = AuthInterceptor.createServerInterceptor(this.securedMethods);
        
        Logger.info('Interceptadores gRPC aplicados', {
            interceptors: ['logging', 'errorHandling', 'authentication']
        });
    }

    async start(port = 50051) {
        try {
            await this.initialize();

            const serverCredentials = grpc.ServerCredentials.createInsecure();
            
            this.server.bindAsync(`0.0.0.0:${port}`, serverCredentials, (error, boundPort) => {
                if (error) {
                    Logger.error('Falha ao iniciar servidor gRPC', error);
                    return;
                }

                this.server.start();
                
                Logger.info('Servidor gRPC iniciado com sucesso', {
                    port: boundPort,
                    protocol: 'gRPC/HTTP2',
                    serialization: 'Protocol Buffers',
                    services: {
                        auth: ['Register', 'Login', 'ValidateToken'],
                        tasks: ['CreateTask', 'GetTasks', 'GetTask', 'UpdateTask', 'DeleteTask', 'GetTaskStats', 'StreamTasks', 'StreamNotifications']
                    },
                    security: {
                        jwt: true,
                        securedMethods: this.securedMethods.length
                    },
                    middleware: ['Authentication', 'ErrorHandling', 'Logging']
                });

                console.log('üöÄ =================================');
                console.log(`üöÄ Servidor gRPC iniciado na porta ${boundPort}`);
                console.log(`üöÄ Protocolo: gRPC/HTTP2`);
                console.log(`üöÄ Serializa√ß√£o: Protocol Buffers`);
                console.log('üöÄ Recursos habilitados:');
                console.log('üöÄ   ‚úì Autentica√ß√£o JWT');
                console.log('üöÄ   ‚úì Error Handling robusto');
                console.log('üöÄ   ‚úì Logging estruturado');
                console.log('üöÄ   ‚úì Streaming bidirecional');
                console.log('üöÄ Servi√ßos dispon√≠veis:');
                console.log('üöÄ   - AuthService (Register, Login, ValidateToken)');
                console.log('üöÄ   - TaskService (CRUD + Streaming)');
                console.log('üöÄ =================================');
            });

            // Graceful shutdown
            process.on('SIGINT', () => {
                Logger.info('Sinal de encerramento recebido, parando servidor...');
                console.log('\n‚è≥ Encerrando servidor...');
                
                this.server.tryShutdown((error) => {
                    if (error) {
                        Logger.error('Erro ao encerrar servidor', error);
                        console.error('‚ùå Erro ao encerrar servidor:', error);
                        process.exit(1);
                    } else {
                        Logger.info('Servidor gRPC encerrado com sucesso');
                        console.log('‚úÖ Servidor encerrado com sucesso');
                        process.exit(0);
                    }
                });
            });

        } catch (error) {
            Logger.error('Falha na inicializa√ß√£o do servidor', error);
            console.error('‚ùå Falha na inicializa√ß√£o do servidor:', error);
            process.exit(1);
        }
    }
}

// Inicializa√ß√£o
if (require.main === module) {
    const server = new GrpcServer();
    const port = process.env.GRPC_PORT || 50051;
    server.start(port);
}

module.exports = GrpcServer;